# ollama-agent

./: .env.example  .gitignore  MANIFEST.in  README.md  install_global_simple.bat  memory_manager.py  model.json  model_loader.py  pyproject.toml  requirements.txt  startup.bat
data/: memory.json
docs/: api.md
examples/: basic_usage.py
scripts/: install_global.bat  startup.bat
src/ollama_agent/: __init__.py
src/ollama_agent/cli/: __init__.py  dev.py  main.py
src/ollama_agent/core/: agent.py  ai_model_lib.py  memory_manager.py  model_loader.py
src/ollama_agent/server/: mcp_server.py  vector_db.py
tests/: test_agent.py  vector_db.py
