[project]
name = "ollama-agent"
version = "0.1.0"
description = "Intelligent Agent CLI - AI-powered command-line assistant with MCP integration"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Chen", email = "your.email@example.com"}
]
maintainers = [
    {name = "Chen", email = "your.email@example.com"}
]
keywords = ["ai", "agent", "cli", "ollama", "mcp", "assistant", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = [
    "mcp>=1.13.0",
    "requests>=2.31.0",
    "ollama>=0.4.1",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ollamaAgent"
Repository = "https://github.com/yourusername/ollamaAgent"
Documentation = "https://github.com/yourusername/ollamaAgent#readme"
"Bug Reports" = "https://github.com/yourusername/ollamaAgent/issues"
Changelog = "https://github.com/yourusername/ollamaAgent/releases"

[project.scripts]
agent = "ollama_agent.cli.main:main"
ollama-agent = "ollama_agent.cli.main:main"
ollama-agent-dev = "ollama_agent.cli.dev:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ollama_agent*"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
